--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -35,6 +35,18 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.anystub</groupId>
+            <artifactId>anystub</artifactId>
+            <version>0.2.22</version>
+        </dependency>
     </dependencies>
 
 
